fix(fix/navbar-and-banner-responsiveness): fix all alignments issues

--- a/client/src/Views/Navbar/Navbar.css
+++ b/client/src/Views/Navbar/Navbar.css
@@ -32,7 +32,7 @@ header a{
 nav{
     max-width: 1440px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 90vw;
 }
