--- a/client/src/Views/OurMembers/OurMembers.css
+++ b/client/src/Views/OurMembers/OurMembers.css
@@ -19,7 +19,7 @@
     margin: auto;
     row-gap: 53px;
     column-gap: 2.7vh;
-    padding: 0 2vh;
+    padding: 0 0;
     box-sizing: border-box;
 }
 
