--- a/client/src/components/BannerTitleAndButton/BannerTitleAndButton.css
+++ b/client/src/components/BannerTitleAndButton/BannerTitleAndButton.css
@@ -2,6 +2,5 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 10px;
-    max-width: 950px;
+    width: 60%;
 }
